deployment/blog.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
